RESOLVED FIXED175614
WKSnapshotConfiguration is missing from the WebKit umbrella header
https://bugs.webkit.org/show_bug.cgi?id=175614
Summary WKSnapshotConfiguration is missing from the WebKit umbrella header
Tim Horton
Reported 2017-08-15 19:21:06 PDT
WKSnapshotConfiguration is missing from the WebKit umbrella header
Attachments
Patch (1.29 KB, patch)
2017-08-15 19:21 PDT, Tim Horton
no flags
Tim Horton
Comment 1 2017-08-15 19:21:25 PDT
Tim Horton
Comment 2 2017-08-15 19:21:59 PDT
WebKit Commit Bot
Comment 3 2017-08-15 20:06:46 PDT
Comment on attachment 318217 [details] Patch Clearing flags on attachment: 318217 Committed r220784: <http://trac.webkit.org/changeset/220784>
WebKit Commit Bot
Comment 4 2017-08-15 20:06:47 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.