WKSnapshotConfiguration is missing from the WebKit umbrella header https://bugs.webkit.org/show_bug.cgi?id=175614 <rdar://problem/33812691>

Reviewed by Dan Bernstein.

* Shared/API/Cocoa/WebKit.h:
Add WKSnapshotConfiguration, which is a public header.


Canonical link: https://commits.webkit.org/192286@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@220784 268f45cc-cd09-0410-ab3c-d52691b4dbfc